tests/artifacts/perf/2026-06-13-rubywaterfall-sparse-reprofile/rustfmt_fsci_sparse_linalg_check.txt
error: let chains are only allowed in Rust 2024 or later
    --> /data/projects/frankenscipy/crates/fsci-sparse/src/linalg.rs:2964:8
     |
2964 |     if let Some(initial) = x0
     |        ^^^^^^^^^^^^^^^^^^^^^^

